--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         
         .container {
             max-width: 1000px;
-            margin: 10px auto;
+            margin: 20px auto;
+            margin-bottom: 80px;
             background: white;
             padding: 20px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -169,12 +170,13 @@
             background-color: var(--primary-color);
             color: white;
             border: none;
+            font-size: 1.15rem;
             padding: 10px 15px;
             border-radius: 10px;
             cursor: pointer;
             display: flex;
             align-items: center;
-            gap: 5px;
+            gap: 15px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
             z-index: 100;
         }
