--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-github"></i>
-                    <a href="https://github.com/hamadkalbat/resume" target="_blank">Resume Website</a>
+                    <a href="https://hamadkalbat.github.io/Resume/" target="_blank">Resume Website</a>
                 </div>
             </div>
         </div>
