--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
         <div class="section">
             <h3 class="section-title">PROFILE</h3>
             <p class="profile-text">
-                I graduated from the American University of Sharjah with a bachelor's degree in computer science. 
+                I graduate from the American University of Sharjah on December 2025 with a collage of engineering bachelor's degree in computer science. 
                 I'm pursuing roles in AI where I can apply my background in 
-                programming, problem solving, and developing intelligent systems. 
+                problem solving, programming, and developing intelligent systems. 
                 I learn quickly, adapt well to new environments, and aim to contribute to 
                 meaningful AI innovation that improves productivity and real-world outcomes.    
             </p>
@@ -341,7 +341,7 @@
                 </div>
                 <div class="item-subtitle">American University of Sharjah</div>
                 <div class="item-details">
-                    <p>Graduate | GPA: <strong>3.36</strong></p>
+                    <p>December 2025 Graduate | GPA: <strong>3.36</strong></p>
                 </div>
             </div>
         </div>
@@ -479,6 +479,7 @@
                         <span class="skill-item">Neural Networks</span>
                         <span class="skill-item">Data Science & Analysis</span>
                         <span class="skill-item">Image Processing</span>
+                        <span class="skill-item">PyTorch & Sklearn</span>
                     </div>
                 </div>
                 
@@ -486,7 +487,7 @@
                     <h4>Other Skills</h4>
                     <div class="skill-list">
                         <span class="skill-item">Problem-Solving</span>
-                        <span class="skill-item">Team Leadership & Time Management</span>
+                        <span class="skill-item">Team Leadership & Management</span>
                         <span class="skill-item">Adaptable</span>
                         <span class="skill-item">Microsoft Suite</span>
                         <span class="skill-item">Project Management</span>
@@ -524,6 +525,13 @@
                     publish them on Microsoft Azure, utilizing test cases and mutation testing.</div>
             </div>
             
+            <div class="course-item">
+                <div class="course-title">Management for Engineers</div>
+                <div class="course-description">
+                    Fundamentals of management, leadership, teamwork, and communication skills for engineers. 
+                    Understanding organizational dynamics, and how organizations function effectively.
+                </div>
+
             <div class="course-item">
                 <div class="course-title">Computer Networks & Security</div>
                 <div class="course-description">Understanding various network and cybersecurity protocols and principles. 
